# hello-automake

./: Makefile.am  autogen.txt  common.gmake.in  configure.ac  configure.sh  project.m4
